--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,34 @@ jobs:
             cd backend
             npm install 
             npm run test
+  
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+         keys: [frontend-build]
+      - run:
+          name: scan-frontend
+          command: |
+            cd frontend
+            npm install 
+            npm audit --audit-level=critical
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+         keys: [backend-build]
+      - run:
+          name: scan-backend
+          command: |
+            cd backend
+            npm install 
+            npm audit --audit-level=critical
+
 
 workflows:
   default:
@@ -71,5 +99,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      
           
 
