--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - checkout
     - restore_cache:
-        keys: [frontend-build]
+        keys: [frontend-build-{{ checksum "frontend/package-lock.json" }}]
     - run:
         name: Build front-end
         command: |
@@ -18,7 +18,7 @@ jobs:
           npm run build
     - save_cache:
         paths: [frontend/node_modules]
-        key: frontend-build
+        key: frontend-build-{{ checksum "frontend/package-lock.json" }}
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -68,7 +68,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-         keys: [frontend-build]
+         keys: [frontend-build-{{ checksum "frontend/package-lock.json" }}]
       - run:
           name: scan-frontend
           command: |
