--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-build0]
+          keys: ['backend-build-{{ checksum "backend/package-lock.json" }}']
       - run:
           name: Back-end build
           command: |
@@ -34,7 +34,7 @@ jobs:
             npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: backend-build0
+          key: 'backend-build-{{ checksum "backend/package-lock.json" }}'
   test-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -54,7 +54,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-         keys: [backend-build0]
+         keys: ['backend-build-{{ checksum "backend/package-lock.json" }}']
       - run:
           name: test-backend
           command: |
@@ -85,7 +85,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-         keys: [backend-build0]
+         keys: ['backend-build-{{ checksum "backend/package-lock.json" }}']
       - run:
           name: scan-backend
           command: |
