--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,8 +84,8 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-         keys: ['backend-build-{{ checksum "backend/package-lock.json" }}']
+      # - restore_cache:
+        #  keys: ['backend-build-{{ checksum "backend/package-lock.json" }}']
       - run:
           name: scan-backend
           command: |
