--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,27 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failure      
+
+      - destroy_environment
+
+  configure-infrastructure:
+    docker:
+      - image: cimg/python:3.10  
+    steps:
+      - checkout
+      - add_ssh_keys:
+              fingerprints: ["d9:5f:e2:f9:ae:f3:a7:f6:89:3d:cc:af:0b:af:d3:ed"] 
+      - attach_workspace:
+          at: ~/
+      - install_awscli
+      - install_insible
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt configure-server.yml
+      - destroy-environment
+         
 
 
 
@@ -191,6 +211,8 @@ workflows:
           filters:
             branches:
               only: [master]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       
           
 
