--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
 
-      - destroy_environment
+      - destroy-environment
 
   configure-infrastructure:
     docker:
