--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -13,10 +13,10 @@
       wait_for_connection:
         timeout: 600
 
-    - name: "install python for Ansible."
-      apt:
-        name: python3
-        update_cache: yes
+    # - name: "install python for Ansible."
+    #   apt:
+    #     name: python3
+    #     update_cache: yes
   environment:
     - NODE_ENV: production
     - VERSION: "1"
