--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
@@ -314,6 +315,46 @@ jobs:
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
       - revert-migrations
+    smoke-test:
+      docker:
+        - image: cimg/python:3.10 
+      steps:
+        - checkout
+        - install_awscli
+        - install_nodejs
+        - run:
+            name: Get backend url
+            command: |
+              export BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+        - run:
+            name: Backend smoke test.
+            command: |
+              export API_URL="http://${BACKEND_IP}:3030"
+              echo "${API_URL}"
+              if curl "${API_URL}/api/status" | grep "ok"
+              then
+                  return 0
+              else
+                  return 1
+              fi
+        - run:
+            name: Frontend smoke test.
+            command: |
+                URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+                echo ${URL} 
+                if curl -s ${URL} | grep "Welcome"
+                then
+                    # Change this to 0 after the job fails
+                  return 1
+                else
+                  return 1
+                fi
+          
+        - destroy-environment
+        - revert-migrations
 
          
 
