--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -329,6 +329,7 @@ jobs:
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text)
+            echo ${BACKEND_IP}
       - run:
           name: Backend smoke test.
           command: |
