--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -395,13 +395,13 @@ jobs:
             # Empty frontend bucket
             export OldWorkflowId=$(curl --insecure  https://kvdb.io/${KVDB_BUCKET}/OldWorkflowId)
             echo ${OldWorkflowId}
-            aws s3 rm s3://udapeople-${OldWorkflowId} --recursive
+            aws s3 rm s3://udapeople-${OldWorkflowId:10:18} --recursive
 
             # Delete frontend stack
-            aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowId}
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowId:10:18}
 
             # Delete backend stack
-            aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowId}
+            aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowId:10:18}
 
 
 workflows:
