--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,22 @@
 version: 2.1
 
 commands:
+
+  troubleshoot_env_vars:
+    steps:
+      - run:
+          name: print env variables
+          command: |
+            echo $TYPEORM_CONNECTION >> env.txt 
+            echo $TYPEORM_MIGRATIONS_DIR >> env.txt
+            echo $TYPEORM_ENTITIES >> env.txt
+            echo $TYPEORM_MIGRATIONS >> env.txt
+            echo $TYPEORM_HOST >> env.txt
+            echo $TYPEORM_PORT >> env.txt
+            echo $TYPEORM_USERNAME >> env.txt
+            echo $TYPEORM_PASSWORD >> env.txt
+            echo $TYPEORM_DATABASE >> env.txt
+            cat env.txt
   install_awscli:
     description: Install AWS CLI v2
     steps:
@@ -72,6 +88,11 @@ commands:
               npm run migration:revert
             fi
 jobs:
+  trouble-shoot:
+    docker:
+      - image: cimg/python:3.10 
+    steps:
+      - troubleshoot_env_vars
   build-frontend:
     docker:
       - image: cimg/node:13.8.0
@@ -407,35 +428,36 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - scan-backend:
-          requires: [build-backend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [master]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend , deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      - trouble-shoot
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires: [build-frontend]
+      # - test-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - deploy-infrastructure:
+      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      #     filters:
+      #       branches:
+      #         only: [master]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      # - deploy-backend:
+      #     requires: [run-migrations]
+      # - smoke-test:
+      #     requires: [deploy-backend , deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
 
 
       
