troubleshoot env variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
             else
                 echo "Wrong" 
             fi
-            if 1234 == "$TYPEORM_PORT"
+            if "1234" == "$TYPEORM_PORT"
             then
                 echo "Correct" 
             else
