troubleshoot env variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ commands:
       - run:
           name: print env variables
           command: |
-            if "postgres" == "$TYPEORM_CONNECTION"
+            if [ "postgres" == "$TYPEORM_CONNECTION" ]
             then
                 echo "Correct" 
             else
                 echo "Wrong" 
             fi
-            if "1234" == "$TYPEORM_PORT"
+            if [ "1234" == "$TYPEORM_PORT" ]
             then
                 echo "Correct" 
             else
