--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,12 +265,10 @@ jobs:
             --output text)
             echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
             cat .circleci/ansible/inventory.txt
-
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-
       - destroy-environment
 
   configure-infrastructure:
@@ -293,10 +291,9 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/python:3.10 # trying python image instead of node image 
+      - image: cimg/python:3.10 
     steps:
       - checkout
-
       - install_awscli
       - install_nodejs
       - restore_cache:
@@ -311,10 +308,8 @@ jobs:
       - run:
           name: Send migration results to KVDB_BUCKET
           command: |
-            echo ${KVDB_BUCKET}
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-                # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
                 echo "saving to kvdb"
                 curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
@@ -338,19 +333,15 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
-
       - run:
           name: Deploy frontend objects
           command: |
             cd frontend
             npm install
             npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-
       - destroy-environment
       - revert-migrations
       
@@ -433,7 +424,6 @@ jobs:
         - run:
             name: Get old stack workflow id and save it in kvdb
             command: |
-              # your code here
               export OldWorkflowID=$(aws cloudformation  \
                 list-exports --query \
                 "Exports[?Name==\`WorkflowID\`].Value"  --output text) 
