--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ jobs:
           command: |
               cd ~/project/backend
               npm install
-              npm run migration:revert
+              npm run migrations:revert
       
   build-frontend:
     docker:
